// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get tile 1`] = `null`;

exports[`get z 1`] = `
Object {
  "canBrowse": true,
  "files": Object {
    "0": Object {
      "fileext": "zoom",
      "filesize": undefined,
      "link": "0",
      "name": "0",
    },
    "1": Object {
      "fileext": "zoom",
      "filesize": undefined,
      "link": "1",
      "name": "1",
    },
    "2": Object {
      "fileext": "zoom",
      "filesize": undefined,
      "link": "2",
      "name": "2",
    },
    "3": Object {
      "fileext": "zoom",
      "filesize": undefined,
      "link": "3",
      "name": "3",
    },
    "4": Object {
      "fileext": "zoom",
      "filesize": undefined,
      "link": "4",
      "name": "4",
    },
  },
}
`;

exports[`get zx 1`] = `
Object {
  "canBrowse": true,
  "files": Object {
    "4": Object {
      "fileext": "column",
      "filesize": undefined,
      "link": "4",
      "name": "4",
    },
  },
}
`;

exports[`get zxy 1`] = `
Object {
  "canBrowse": true,
  "files": Object {
    "2.pbf": Object {
      "alternateFormats": Object {
        "geojson": "2.geojson",
        "pbfjson": "2.pbfjson",
      },
      "fileext": "row",
      "filesize": 107,
      "link": "2",
      "name": "2.pbf",
    },
  },
}
`;

exports[`typeFromFileExt mbtiles 1`] = `"mbtiles"`;

exports[`typeFromFileExt png 1`] = `"file"`;

exports[`typeFromFileExt sqlite 1`] = `"sqlite"`;
